SDKs/apideck.com/accounting/8.86.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    opts := []sdk.SDKOption{
        sdk.WithSecurity(
            shared.Security{
                APIKey: shared.SchemeAPIKey{
                    APIKey: "YOUR_API_KEY_HERE",
                },
            }
        ),
    }

    s := sdk.New(opts...)
    
    req := operations.BalanceSheetOneRequest{
        Security: operations.BalanceSheetOneSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        QueryParams: operations.BalanceSheetOneQueryParams{
            Filter: &shared.BalanceSheetFilter{
                EndDate: "sit",
                StartDate: "voluptas",
            },
            PassThrough: map[string]interface{}{
                "expedita": "consequuntur",
                "dolor": "expedita",
            },
            Raw: true,
        },
        Headers: operations.BalanceSheetOneHeaders{
            XApideckAppID: "fugit",
            XApideckConsumerID: "et",
            XApideckServiceID: "nihil",
        },
    }
    
    res, err := s.BalanceSheet.BalanceSheetOne(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.GetBalanceSheetResponse != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Balance Sheet

* `BalanceSheetOne` - Get BalanceSheet

### Bills

* `BillsAdd` - Create Bill
* `BillsAll` - List Bills
* `BillsDelete` - Delete Bill
* `BillsOne` - Get Bill
* `BillsUpdate` - Update Bill

### Company Info

* `CompanyInfoOne` - Get company info

### Credit Notes

* `CreditNotesAdd` - Create Credit Note
* `CreditNotesAll` - List Credit Notes
* `CreditNotesDelete` - Delete Credit Note
* `CreditNotesOne` - Get Credit Note
* `CreditNotesUpdate` - Update Credit Note

### Customers

* `CustomersAdd` - Create Customer
* `CustomersAll` - List Customers
* `CustomersDelete` - Delete Customer
* `CustomersOne` - Get Customer
* `CustomersUpdate` - Update Customer

### Invoice Items

* `InvoiceItemsAdd` - Create Invoice Item
* `InvoiceItemsAll` - List Invoice Items
* `InvoiceItemsDelete` - Delete Invoice Item
* `InvoiceItemsOne` - Get Invoice Item
* `InvoiceItemsUpdate` - Update Invoice Item

### Invoices

* `InvoicesAdd` - Create Invoice
* `InvoicesAll` - List Invoices
* `InvoicesDelete` - Delete Invoice
* `InvoicesOne` - Get Invoice
* `InvoicesUpdate` - Update Invoice

### Ledger Accounts

* `LedgerAccountsAdd` - Create Ledger Account
* `LedgerAccountsAll` - List Ledger Accounts
* `LedgerAccountsDelete` - Delete Ledger Account
* `LedgerAccountsOne` - Get Ledger Account
* `LedgerAccountsUpdate` - Update Ledger Account

### Payments

* `PaymentsAdd` - Create Payment
* `PaymentsAll` - List Payments
* `PaymentsDelete` - Delete Payment
* `PaymentsOne` - Get Payment
* `PaymentsUpdate` - Update Payment

### Profit and Loss

* `ProfitAndLossOne` - Get Profit and Loss

### Suppliers

* `SuppliersAdd` - Create Supplier
* `SuppliersAll` - List Suppliers
* `SuppliersDelete` - Delete Supplier
* `SuppliersOne` - Get Supplier
* `SuppliersUpdate` - Update Supplier

### Tax Rates

* `TaxRatesAdd` - Create Tax Rate
* `TaxRatesAll` - List Tax Rates
* `TaxRatesDelete` - Delete Tax Rate
* `TaxRatesOne` - Get Tax Rate
* `TaxRatesUpdate` - Update Tax Rate

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
