SDKs/apideck.com/accounting/9.1.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/apideck.com/accounting/9.1.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.BalanceSheetOneRequest{
        Security: operations.BalanceSheetOneSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        QueryParams: operations.BalanceSheetOneQueryParams{
            Filter: &shared.BalanceSheetFilter{
                EndDate: "2021-12-31",
                StartDate: "2021-01-01",
            },
            PassThrough: map[string]interface{}{
                "deserunt": "porro",
                "nulla": "id",
                "vero": "perspiciatis",
            },
            Raw: false,
        },
        Headers: operations.BalanceSheetOneHeaders{
            XApideckAppID: "nulla",
            XApideckConsumerID: "nihil",
            XApideckServiceID: "fuga",
        },
    }

    ctx := context.Background()
    res, err := s.BalanceSheet.BalanceSheetOne(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.GetBalanceSheetResponse != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### BalanceSheet

* `BalanceSheetOne` - Get BalanceSheet

### Bills

* `BillsAdd` - Create Bill
* `BillsAll` - List Bills
* `BillsDelete` - Delete Bill
* `BillsOne` - Get Bill
* `BillsUpdate` - Update Bill

### CompanyInfo

* `CompanyInfoOne` - Get company info

### CreditNotes

* `CreditNotesAdd` - Create Credit Note
* `CreditNotesAll` - List Credit Notes
* `CreditNotesDelete` - Delete Credit Note
* `CreditNotesOne` - Get Credit Note
* `CreditNotesUpdate` - Update Credit Note

### Customers

* `CustomersAdd` - Create Customer
* `CustomersAll` - List Customers
* `CustomersDelete` - Delete Customer
* `CustomersOne` - Get Customer
* `CustomersUpdate` - Update Customer

### InvoiceItems

* `InvoiceItemsAdd` - Create Invoice Item
* `InvoiceItemsAll` - List Invoice Items
* `InvoiceItemsDelete` - Delete Invoice Item
* `InvoiceItemsOne` - Get Invoice Item
* `InvoiceItemsUpdate` - Update Invoice Item

### Invoices

* `InvoicesAdd` - Create Invoice
* `InvoicesAll` - List Invoices
* `InvoicesDelete` - Delete Invoice
* `InvoicesOne` - Get Invoice
* `InvoicesUpdate` - Update Invoice

### JournalEntries

* `JournalEntriesAdd` - Create Journal Entry
* `JournalEntriesAll` - List Journal Entries
* `JournalEntriesDelete` - Delete Journal Entry
* `JournalEntriesOne` - Get Journal Entry
* `JournalEntriesUpdate` - Update Journal Entry

### LedgerAccounts

* `LedgerAccountsAdd` - Create Ledger Account
* `LedgerAccountsAll` - List Ledger Accounts
* `LedgerAccountsDelete` - Delete Ledger Account
* `LedgerAccountsOne` - Get Ledger Account
* `LedgerAccountsUpdate` - Update Ledger Account

### Payments

* `PaymentsAdd` - Create Payment
* `PaymentsAll` - List Payments
* `PaymentsDelete` - Delete Payment
* `PaymentsOne` - Get Payment
* `PaymentsUpdate` - Update Payment

### ProfitAndLoss

* `ProfitAndLossOne` - Get Profit and Loss

### Suppliers

* `SuppliersAdd` - Create Supplier
* `SuppliersAll` - List Suppliers
* `SuppliersDelete` - Delete Supplier
* `SuppliersOne` - Get Supplier
* `SuppliersUpdate` - Update Supplier

### TaxRates

* `TaxRatesAdd` - Create Tax Rate
* `TaxRatesAll` - List Tax Rates
* `TaxRatesDelete` - Delete Tax Rate
* `TaxRatesOne` - Get Tax Rate
* `TaxRatesUpdate` - Update Tax Rate
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
